<resources>
    <string name="app_name">Rummy Score</string>
    <string name="players">Players</string>
    <string name="add_player">Add Player</string>
    <string name="rummy_score">Rummy Score</string>
    <string name="new_game">New Game</string>
    <string name="saved_games">Saved Games</string>
    <string name="start_game">Start Game</string>
    <string name="score_round">Score Round</string>
    <string name="player_file_name">players.dat</string>
    <string name="action_save">Save Scorecard</string>
    <string name="title_activity_saved_games">SavedGamesActivity</string>
    <string name="games_file_name">savedgames.dat</string>
    <string name="load_game">Load Game</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="current_game">Current Game</string>
    <string name="current_game_file_name">currentgame.dat</string>
    <string name="options_help"><![CDATA[Options & Help]]></string>
    <string name="game_rules">Rummy Rules</string>
    <string name="how_to">How To Use Scorecard</string>
</resources>
