<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_gravity="center_vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OptionsHelpActivity">

    <Button
        android:id="@+id/buttonGameRules"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:onClick="onButtonGameRulesClick"
        android:text="@string/game_rules" />

    <Button
        android:id="@+id/buttonHowTo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:onClick="onButtonHowToClick"
        android:text="@string/how_to" />

    <Button
        android:id="@+id/buttonOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:onClick="onButtonOptionsClick"
        android:text="@string/saved_games" />

</LinearLayout>