<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/textPlayerListTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/players"
        android:textSize="24sp" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/playerListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5" />

    <Button
        android:id="@+id/buttonAddPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onButtonAddPlayerClick"
        android:text="@string/add_player" />

    <EditText
        android:id="@+id/editPlayerName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onButtonStartGameClick"
        android:text="@string/start_game" />

</LinearLayout>