<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/rummy_score"
        android:textSize="72sp"
        app:fontFamily="@font/aladin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView">

        <Button
            android:id="@+id/buttonNewGame"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:onClick="onButtonNewGameClick"
            android:text="@string/new_game" />

        <Button
            android:id="@+id/buttonSavedGames"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:onClick="onButtonSavedGamesClick"
            android:text="@string/saved_games" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>